# kompass

./: .gitignore  LICENSE  README.md  class.AnimatedLevelBar.html  class.AppButton.html  class.AppSearchProvider.html  class.ArrowButton.html  class.AudioNode.html  class.BluetoothDevice.html  class.Cava.html  class.DBusSearchProvider.html  class.GnomeSearchProvider.html  class.IconUtils.html  class.Launcher.html  class.Notification.html  class.Player.html  class.PopupNotification.html  class.RevealingSearchResultView.html  class.RiverTags.html  class.RotatedBin.html  class.ScreenRecorder.html  class.ScrolledBin.html  class.ScrollingLabel.html  class.SearchResult.html  class.SearchResultButton.html  class.SearchResultProvider.html  class.Svg.html  class.Tray.html  class.VerticalClock.html  class.WifiAp.html  class.Window.html  classes_hierarchy.html  const.GETTEXT_PACKAGE.html  const.LOCALEDIR.html  const.MAJOR_VERSION.html  const.MICRO_VERSION.html  const.MINOR_VERSION.html  const.PACKAGE_VERSION.html  const.VERSION.html  ctor.AnimatedLevelBar.new.html  (+330 more)
.github/: FUNDING.yml
.github/workflows/: gi-docgen.yaml  gi-gocgen.yaml  uncrustify.yaml
.woodpecker/: docs.yaml
core/: config.vala  kompass.vala  meson.build  moduleManager.vala
data/: com.github.kotontrion.kompass.desktop.in  com.github.kotontrion.kompass.metainfo.xml.in  com.github.kotontrion.kompass.service.in  kompass.gresource.xml  meson.build
data/icons/: meson.build
data/scss/: bar.scss  main.scss  meson.build  quicksettings.scss  tags.scss
data/ui/: appButton.blp  bar.blp  launcher.blp  meson.build  notification.blp  qs.blp  qsAudio.blp  qsAudioEndpoint.blp  qsBluetooth.blp  qsBluetoothDevice.blp  qsNotif.blp
docs/: kompass.toml.in  meson.build
examples/: config.json  style.css
examples/ValaExample/: meson.build
kompass/: meson.build
kompass/data/: com.github.kotontrion.kompass.gschema.xml  kompass-bar.gresource.xml  kompass.gresource.xml  meson.build
kompass/data/scss/: bar.scss  main.scss  meson.build  notifications.scss  quicksettings.scss
kompass/data/ui/: bar.blp  clock.blp  launcher.blp  meson.build  qs.blp  qsAudio.blp  qsBluetooth.blp  qsButton.blp  qsNotif.blp  qsWifi.blp
kompass/po/: POTFILES.in  de.po  kompass.pot  meson.build
kompass/src/: appButton.vala  application.vala  bar.vala  config.vala.in  gen_ensure_type.awk  launcher.vala  main.vala  meson.build  mprisPlayer.vala  popupNotificationWindow.vala  qs.vala  qsAudio.vala  qsAudioEndpoint.vala  qsBluetooth.vala  qsBluetoothDevice.vala  qsNotif.vala  qsWifi.vala  tags.vala  tray.vala
libkompass/: README.md  meson.build
libkompass/data/: libkompass.gresource.xml  meson.build
libkompass/data/icons/scalable/status/: bluetooth.gpa  microphone.gpa  notification.gpa  speaker.gpa  spinner-check.gpa  wifi.gpa
libkompass/data/ui/: audio-endpoint.blp  bluetooth-device.blp  meson.build  mpris-player.blp  notification.blp  popup-notification.blp  search-result-button.blp  search-result-provider.blp  search-result-view.blp  wifi-ap.blp
libkompass/src/: animated-level-bar.vala  app-button.vala  arrow-button.vala  audio-endpoint.vala  bluetooth-device.vala  cava.vala  config.vala.in  gir.py  kompass-main.vala  launcher.vala  meson.build  mpris-player.vala  notification.vala  popup-notification.vala  rotated-bin.vala  screenrecord.vala  scrolled-bin.vala  search-provider.vala  search-result-button.vala  svg.vala  tags.vala  tray.vala  utils.vala  vertical-clock.vala  wifi-ap.vala  window.vala
modules/: meson.build
modules/Kompass/: bar.vala  clock.vala  meson.build  module.vala  vclock.vala
modules/River/: meson.build  module.vala  title.vala
modules/Tray/: meson.build  tray.vala
modules/examples/: meson.build
modules/examples/ValaExample/: example.vala  meson.build
modules/examples/ValaLabel/: label.vala  meson.build
po/: POTFILES.in  de.po  kompass.pot  meson.build
src/: appButton.vala  application.vala  bar.vala  cava.vala  clock.vala  gen_ensure_type.awk  launcher.vala  main.vala  meson.build  mprisPlayer.vala  notification.vala  qs.vala  qsAudioEndpoint.vala  qsBluetooth.vala  qsBluetoothDevice.vala  qsButton.vala  qsNotif.vala  tags.vala
subprojects/: gi-docgen.wrap  kompass
subprojects/Kompass/: bar.vala  clock.vala  meson.build  module.vala  quicksettings.vala
subprojects/River/: meson.build  tags.vala  title.vala
subprojects/Tray/: meson.build  module.vala  tray.vala
subprojects/kompass/: meson.build  meson.options
subprojects/kompass-bar/: meson.build
subprojects/kompass-bar/data/: meson.build
subprojects/kompass-bar/data/ui/: qsBluetooth.blp
subprojects/kompass-bar/src/: appButton.vala  application.vala  bar.vala  gen_ensure_type.awk  main.vala  meson.build  mprisPlayer.vala  notification.vala  qsBluetoothDevice.vala
subprojects/kompass-widgets/: README.md  meson.build
subprojects/kompass-widgets/data/: kompass-widgets.gresource.xml  (+1 more)
subprojects/kompass/data/ui/: appButton.blp  bar.blp  launcher.blp  meson.build  mprisPlayer.blp  notification.blp  qs.blp  qsAudio.blp  qsAudioEndpoint.blp  qsBluetoothDevice.blp  qsButton.blp  vertical-clock.blp
subprojects/kompass/src/: appButton.vala  application.vala  arrow-button.vala  bar.vala  launcher.vala  meson.build  mprisPlayer.vala  notification.vala  qs.vala  qsAudio.vala  qsAudioEndpoint.vala  qsBluetooth.vala  qsBluetoothDevice.vala  qsNotif.vala  tags.vala
subprojects/libkompass/: meson.build  meson_options.txt
subprojects/libkompass/data/: kompass.gresource.xml  libkompass.gresource.xml  meson.build
subprojects/libkompass/data/scss/: arrow-button.scss  main.scss  meson.build
subprojects/libkompass/data/ui/: arrow-button.blp  bluetooth-device.blp  meson.build  mpris-player.blp  notification.blp  search-result-provider.blp
subprojects/libkompass/src/: arrow-button.vala  audio-endpoint.vala  cava.vala  config.vala.in  gir.py  kompass-main.vala  launcher.vala  meson.build  mpris-player.vala  screenrecord.vala  scrolling-label.vala  search-provider.vala  search-result-button.vala  tags.vala  tray.vala  vertical-clock.vala
(+17 files in other folders)
